--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "author": "Jimmy DC",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "babel-loader": "^8.2.1"
-  }
+  "dependencies": {}
 }
