--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "core-js": "^3.8.1",
-    "regenerator-runtime": "^0.13.7"
+    "core-js": "^3.8.1"
   }
 }
