update babel corejs property to 3.8

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": [
     [
       "@babel/preset-env",
-      { "debug": true, "useBuiltIns": "usage", "corejs": 3 }
+      { "debug": true, "useBuiltIns": "usage", "corejs": "3.8" }
     ]
   ]
 }
