--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
