--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^5.0.0-beta.5",
     "mini-css-extract-plugin": "^1.3.4",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.1.0",
+    "postcss-preset-env": "^6.7.0",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
